@@ -1,7 +1,9 @@
 sane-backends (1.0.25-2) unstable; urgency=medium
 
   * Undelete, refresh and rename
-    debian/patches/0125-multiarch_dll_search_path.patch.
+    debian/patches/0125-multiarch_dll_search_path.patch (Closes: #804240).
+  * debian/rules:
+    - Remove "UPSTREAM_VERSION" and use "VERSION" instead.
 
  -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sat, 07 Nov 2015 04:49:15 +0100
 
